--- a/landingpage-uncompressed.css
+++ b/landingpage-uncompressed.css
@@ -1532,7 +1532,7 @@ box-shadow: 0 2px 0 #000,inset 0 1px 0 0 #fff;
     margin-left: -10px; }
     .m-pricetable__matter .m-list--horizontally > li {
       margin-left: 10px; }
-
+/* Timeline */
 .m-timeline {
   max-width: 620px;
   margin-left: auto;
